// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormField /> errors for invalid prefix 1`] = `
"Warning: Failed prop type: \`FormField\` only accepts children of type Prefix
    in FormField"
`;

exports[`<FormField /> errors for invalid suffix 1`] = `
"Warning: Failed prop type: \`FormField\` only accepts children of type Suffix
    in FormField"
`;

exports[`<FormField /> hides the label 1`] = `
<section
  className="field-0-2-1"
>
  <div
    className=""
  >
    <label
      className="label-0-2-6 label_hidden-0-2-8"
      htmlFor="foo"
    >
      <StatusText
        bold={true}
        danger={false}
        muted={false}
        small={false}
      >
        Label
      </StatusText>
    </label>
    <div
      className="input-0-2-11 input_hideLabel-0-2-15"
    >
      <div
        className="anchor-0-2-17"
      >
        Foo
      </div>
    </div>
  </div>
</section>
`;

exports[`<FormField /> renders input after the label 1`] = `
<section
  className="field-0-2-1"
>
  <div
    className=""
  >
    <label
      className="label-0-2-6"
      htmlFor="foo"
    >
      <StatusText
        bold={true}
        danger={false}
        muted={false}
        small={false}
      >
        Label
      </StatusText>
    </label>
    <div
      className="input-0-2-11"
    >
      <div
        className="anchor-0-2-17"
      >
        Foo
      </div>
    </div>
  </div>
</section>
`;

exports[`<FormField /> renders input after the label 2`] = `
<section
  className="field-0-2-1"
>
  <div
    className="content_inline-0-2-4"
  >
    <label
      className="label-0-2-6 label_noSpacing-0-2-9"
      htmlFor="foo"
    >
      <StatusText
        bold={true}
        danger={false}
        muted={false}
        small={false}
      >
        Label
      </StatusText>
    </label>
    <div
      className="input-0-2-11 input_afterInline-0-2-14"
    >
      <div
        className="anchor-0-2-17"
      >
        Foo
      </div>
    </div>
  </div>
</section>
`;

exports[`<FormField /> renders input before the label 1`] = `
<section
  className="field-0-2-1"
>
  <div
    className=""
  >
    <div
      className="input-0-2-11"
    >
      <div
        className="anchor-0-2-17"
      >
        Foo
      </div>
    </div>
    <label
      className="label-0-2-6 label_noSpacing-0-2-9"
      htmlFor="foo"
    >
      <StatusText
        bold={true}
        danger={false}
        muted={false}
        small={false}
      >
        Label
      </StatusText>
    </label>
  </div>
</section>
`;

exports[`<FormField /> renders input before the label 2`] = `
<section
  className="field-0-2-1"
>
  <div
    className="content_inline-0-2-4"
  >
    <div
      className="input-0-2-11 input_beforeInline-0-2-13"
    >
      <div
        className="anchor-0-2-17"
      >
        Foo
      </div>
    </div>
    <label
      className="label-0-2-6 label_noSpacing-0-2-9"
      htmlFor="foo"
    >
      <StatusText
        bold={true}
        danger={false}
        muted={false}
        small={false}
      >
        Label
      </StatusText>
    </label>
  </div>
</section>
`;

exports[`<FormField /> supports a prefix 1`] = `
<section
  className="field-0-2-1"
>
  <div
    className=""
  >
    <label
      className="label-0-2-6"
      htmlFor="foo"
    >
      <StatusText
        bold={true}
        danger={false}
        muted={false}
        small={false}
      >
        Label
      </StatusText>
    </label>
    <div
      className="input-0-2-11"
    >
      <div
        className="affix-0-2-16"
      >
        <Prefix>
          Foo
        </Prefix>
      </div>
      <div
        className="anchor-0-2-17"
      >
        Foo
      </div>
    </div>
  </div>
</section>
`;

exports[`<FormField /> supports a suffix 1`] = `
<section
  className="field-0-2-1"
>
  <div
    className=""
  >
    <label
      className="label-0-2-6"
      htmlFor="foo"
    >
      <StatusText
        bold={true}
        danger={false}
        muted={false}
        small={false}
      >
        Label
      </StatusText>
    </label>
    <div
      className="input-0-2-11"
    >
      <div
        className="anchor-0-2-17"
      >
        Foo
      </div>
      <div
        className="affix-0-2-16"
      >
        <Suffix>
          Foo
        </Suffix>
      </div>
    </div>
  </div>
</section>
`;
